working on admin login

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <div>
+    <form action="../routes/admin" method="post">
+      <input type="text" name="userName" id="userName" placeholder="Användarnamn">
+      <input type="password" name="userPass" id="password" placeholder="Lösenord">
+      <button type="submit">Logga in</button></form>
+  </div>
 </body>
 
 </html>
