--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 
 <body>
   <div>
-    <form action="../routes/admin" method="post">
+    <h1>Inloggning för administratörer</h1>
+    <form action="https://stinas-newsletter.herokuapp.com/admin" method="post">
       <input type="text" name="userName" id="userName" placeholder="Användarnamn">
       <input type="password" name="userPass" id="password" placeholder="Lösenord">
       <button type="submit">Logga in</button></form>
